Fixes #hash non-scroll, above the fold styling flickers

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -98,6 +98,10 @@ nav {
     padding: 14px 35px;
     border-radius: 50px;
     letter-spacing: 0.1em;
+    color: #fff;
+    font-size: 14px;
+    background-color: rgb(17, 24, 39);
+    font-weight: 700;
     &:focus-visible, 
     &:hover {
         // border-color: rgba(17, 24, 39, 1);
